--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="assets/css/responsive.css">
     <!-- Title CSS -->
-    <title>ABF Shipping</title>
+    <title>ABAF Shipping</title>
     <!-- Favicon Link -->
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
@@ -104,7 +104,7 @@
             <!-- For Mobile Device -->
             <div class="mobile-nav">
                 <a href="index.html" class="logo">
-                    <img src="/assets/img/logo.png" height="90" width="90" alt="logo">
+                    <img src="assets/img/logo.png" height="90" width="90" alt="logo">
                 </a>
             </div>
 
@@ -115,15 +115,15 @@
                 <div class="container nav_color sticky_nav">
                     <nav class="navbar navbar-expand-lg navbar-light">
                         <a class="navbar-brand" href="index.html">
-                            <img src="/assets/img/logo.png" height="90" width="90" alt="logo">
+                            <img src="assets/img/logo.png" height="90" width="90" alt="logo">
                         </a>
                         <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto">
                                 <li class="nav-item">
-                                    <a href="index.html" class="nav-link  active">Home</a>
+                                    <a href="index.html" class="nav-link ">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="about.html" class="nav-link">About</a>
+                                    <a href="about.html" class="nav-link active">About</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="service.html" class="nav-link ">Services</a>
@@ -210,19 +210,20 @@
     <!-- Page Title End -->
 
     <!-- About Section Start -->
-    <section class="about-section about-style-two pb-100">
+    <section class="about-section pt-100">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-5">
+            <div class="row align-items-center" style="flex-direction:row-reverse;">
+                <div class="col-lg-5 wow animate__animated animate__fadeInUp" data-wow-duration="1s">
                     <div class="about-img">
-                        <img src="assets/img/about/2.jpg" alt="about image">
+                        <img src="assets/img/home/NVOCC 2.jpg" alt="about image">
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="about-text">
                         <div class="section-title">
-                            <span>About Us</span>
-                            <h2>We Provide Fast & Safe Service to Our Customers</h2>
+                            <span>About</span>
+                            <h2>ABAF Shipping</h2>
+                            <span style="color:#3C0C70">A Reliable Shipping Service Provider</span>
                         </div>
 
                         <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -243,37 +244,48 @@
                         <div class="tab-content" id="myTabContent">
                             <div class="tab-pane fade show active" id="about" role="tabpanel"
                                 aria-labelledby="about-tab">
-                                <p>Found parents would couldn't said on. End is partiality which uniforms, the
-                                    fundamental; All luxury. Dissolute small a heavy word small big been time small
-                                    caught guest movement be will a are where at the front its meet been sleep
-                                    spineless, were finds pointed secure in a success.</p>
-
-                                <p>Of pros the but so, from ill to that good in the trying everyone. That, feedback
-                                    there made he was may simple, its yet a own blind you ago hand, were finds pointed
-                                    secure in a success.
+                                <p>ABAF Shipping is a leading International Transportation Company which has been
+                                    providing quality services to its clients since last many years. We provide same
+                                    day, guaranteed shipments and have a 24/7 customer service line. We are fully
+                                    licensed and registered with the UAE Ministry of Economy. As a reliable logistics
+                                    provider company, we provide solutions to organizations engaged in international
+                                    trade.
+                                    We aim to be a one-stop solution for all shipping and logistics services through our
+                                    diverse service offerings including Storage, Warehousing, Air Freight Services, Road
+                                    Freight Services and Ocean Freight Services.
+                                    To achieve the milestones, we have an experienced team with vast knowledge of the
+                                    shipping industry who can support your needs in any way you can - whether you need
+                                    to ship your goods across the city or halfway across the world. Contact with us
+                                    today to discuss how we work in a brief.
                                 </p>
+
+                                <!-- <p>Of pros, the but so, from ill to that good in the trying everyone. That, feedback
+                                there made he was may simple, it is yet a own blind you ago hand, were finds pointed
+                                secure in a success.
+                            </p> -->
                             </div>
                             <div class="tab-pane fade" id="mission" role="tabpanel" aria-labelledby="mission-tab">
-                                <p>Found parents would couldn't said on. End is partiality which uniforms, the
-                                    fundamental; All luxury. Dissolute small a heavy word small big been time small
-                                    caught guest movement be will a are where at the front its meet been sleep
-                                    spineless, were finds pointed secure in a success.</p>
-
-                                <p>Of pros the but so, from ill to that good in the trying everyone. That, feedback
-                                    there made he was may simple, its yet a own blind you ago hand, were finds pointed
-                                    secure in a success.
-                                </p>
+                                <p>ABAF Shipping is dedicated to providing excellent transportation services to our
+                                    customers worldwide. We strive to maintain the highest standards of safety and
+                                    customer satisfaction while ensuring that our prices remain competitive. We look
+                                    forward to continuing to serve our customers with the same commitment and dedication
+                                    in the years to come.</p>
+                                <!-- 
+                            <p>Of pros the but so, from ill to that good in the trying everyone. That, feedback
+                                there made he was may simple, it is yet a own blind you ago hand, were finds pointed
+                                secure in a success.
+                            </p> -->
                             </div>
                             <div class="tab-pane fade" id="goal" role="tabpanel" aria-labelledby="goal-tab">
-                                <p>Found parents would couldn't said on. End is partiality which uniforms, the
-                                    fundamental; All luxury. Dissolute small a heavy word small big been time small
-                                    caught guest movement be will a are where at the front its meet been sleep
-                                    spineless, were finds pointed secure in a success.</p>
+                                <p>ABAF Shipping is committed to providing the best possible transportation experience
+                                    for its customers by continuously innovating and improving its services. We aim to
+                                    be the top international transportation company that provides quality services to
+                                    its customers and helps them to achieve their business goals.</p>
 
-                                <p>Of pros the but so, from ill to that good in the trying everyone. That, feedback
-                                    there made he was may simple, its yet a own blind you ago hand, were finds pointed
-                                    secure in a success.
-                                </p>
+                                <!-- <p>Of pros the but so, from ill to that good in the trying everyone. That, feedback
+                                there made he was may simple, it is yet a own blind you ago hand, were finds pointed
+                                secure in a success.
+                            </p> -->
                             </div>
                         </div>
 
@@ -299,10 +311,11 @@
                 <div class="col-lg-6 p-0">
                     <div class="why-choose-text">
                         <div class="section-title">
-                            <h2>Why People Choose Fixa?</h2>
-                            <p>A cargo aircraft also known as freight aircraft, freighter, airlifter or cargo jet is a
-                                fixed-wing aircraft that is designed or converted for the carriage of cargo rather than
-                                passengers.</p>
+                            <h2>Why People Choose ABAF?</h2>
+                            <p>There are many reasons to choose ABF Shipping for your delivery needs. They are fast and
+                                secure, and your product will be safe during the entire shipping process. With years of
+                                experience in the business, you can trust that your shipping requirements are in safe
+                                hands - ABF Shipping.</p>
                         </div>
 
                         <div class="accordions">
@@ -312,10 +325,8 @@
                                     <h2>Fast & Safe Delivery <i class="icofont-stylish-right down-arrow"></i></h2>
                                 </div>
                                 <div class="accordion-content" id="item1">
-                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                                        euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad
-                                        minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
-                                        aliquip ex ea commodo.</p>
+                                    <p>ABF Shipping is the best choice for your shipping needs as we provide fast and
+                                        secure delivery to save your precious time.</p>
                                 </div>
                             </div>
 
@@ -325,10 +336,8 @@
                                     <h2>Product Security <i class="icofont-stylish-right down-arrow"></i></h2>
                                 </div>
                                 <div class="accordion-content" id="item2">
-                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                                        euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad
-                                        minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
-                                        aliquip ex ea commodo.</p>
+                                    <p>Product safety is our top priority, so you can rest assured that your shipment
+                                        will be safe and sound.</p>
                                 </div>
                             </div>
 
@@ -338,10 +347,8 @@
                                     <h2>Price Oriented <i class="icofont-stylish-right down-arrow"></i></h2>
                                 </div>
                                 <div class="accordion-content" id="item3">
-                                    <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                                        euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad
-                                        minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
-                                        aliquip ex ea commodo.</p>
+                                    <p> ABF Shipping is value-oriented, which means you can get a lot on your shipping
+                                        needs.</p>
                                 </div>
                             </div>
 
@@ -351,10 +358,8 @@
                                     <h2>Secured Payment <i class="icofont-stylish-right down-arrow"></i></h2>
                                 </div>
                                 <div class="accordion-content" id="item4">
-                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                                        euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad
-                                        minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
-                                        aliquip ex ea commodo.</p>
+                                    <p>ABF Shipping is well-experienced in product safety and security, so you can rest
+                                        assured that your products will be safe & secure.</p>
                                 </div>
                             </div>
 
@@ -364,10 +369,8 @@
                                     <h2>24/7 Support <i class="icofont-stylish-right down-arrow"></i></h2>
                                 </div>
                                 <div class="accordion-content" id="item5">
-                                    <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                                        euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad
-                                        minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
-                                        aliquip ex ea commodo.
+                                    <p> ABF Shipping provides 24/7 support to ensure that your products are safe and
+                                        arrive on time.
                                     </p>
                                 </div>
                             </div>
@@ -379,10 +382,8 @@
                                 </div>
                                 <div class="accordion-content" id="item6">
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                                        euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad
-                                        minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
-                                        aliquip ex ea commodo.
+                                        ABF Shipping is a reliable, experienced shipping company providing fast and
+                                        secure delivery services.
                                     </p>
                                 </div>
                             </div>
@@ -760,7 +761,8 @@
         </div>
 
         <div class="copyright-area">
-            <p>Copyright @ABF Shipping All Rights Reserved by <a href="#" target="_blank">Al Bahr Al Fakher Shipping</a>
+            <p>Copyright @ABAF Shipping All Rights Reserved by <a href="#" target="_blank">Al Bahr Al Fakher
+                    Shipping</a>
             </p>
         </div>
 
