--- a/index-two.html
+++ b/index-two.html
@@ -25,7 +25,7 @@
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="assets/css/responsive.css">
     <!-- Title CSS -->
-    <title>Fixa - Transport & Logistics HTML Template</title>
+    <title>ABAF Shipping</title>
     <!-- Favicon Link -->
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
@@ -164,7 +164,7 @@
                     <div class="row align-items-center pb-70">
                         <div class="col-lg-6">
                             <div class="banner-text text-left">
-                                <h1>Being With Fixa Stay Tensed Free</h1>
+                                <h1>Being With ABAF Stay Tensed Free</h1>
                                 <p>Operations deal with the way the vehicles are operated, and the procedures set for
                                     this purpose, including financing.</p>
 
@@ -959,7 +959,7 @@
             </div>
         </div>
         <div class="copyright-area">
-            <p>2021 Fixa. All Rights Reserved by <a href="https://hibootstrap.com" target="_blank">HiBootstrap</a></p>
+            <p>2021 ABAF. All Rights Reserved by <a href="https://hibootstrap.com" target="_blank">HiBootstrap</a></p>
         </div>
 
         <div class="lines">
