--- a/service-two.html
+++ b/service-two.html
@@ -26,7 +26,7 @@
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="assets/css/responsive.css">
     <!-- Title CSS -->
-    <title>Fixa - Transport & Logistics HTML Template</title>
+    <title>ABAF Shipping</title>
     <!-- Favicon Link -->
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
@@ -261,7 +261,7 @@
                 <div class="col-lg-6 p-0">
                     <div class="why-choose-text">
                         <div class="section-title">
-                            <h2>Why People Choose Fixa?</h2>
+                            <h2>Why People Choose ABAF?</h2>
                             <p>A cargo aircraft also known as freight aircraft, freighter, airlifter or cargo jet is a
                                 fixed-wing aircraft that is designed or converted for the carriage of cargo rather than
                                 passengers.</p>
@@ -569,7 +569,7 @@
             </div>
         </div>
         <div class="copyright-area">
-            <p>Copyright @Fixa. All Rights Reserved by <a href="https://hibootstrap.com" target="_blank">HiBootstrap</a>
+            <p>Copyright @ABAF. All Rights Reserved by <a href="https://hibootstrap.com" target="_blank">HiBootstrap</a>
             </p>
         </div>
 
