--- a/service.html
+++ b/service.html
@@ -26,7 +26,7 @@
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="assets/css/responsive.css">
     <!-- Title CSS -->
-    <title>ABF Shipping</title>
+    <title>ABAF Shipping</title>
     <!-- Favicon Link -->
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
@@ -104,7 +104,7 @@
             <!-- For Mobile Device -->
             <div class="mobile-nav">
                 <a href="index.html" class="logo">
-                    <img src="/assets/img/logo.png" height="90" width="90" alt="logo">
+                    <img src="assets/img/logo.png" height="90" width="90" alt="logo">
                 </a>
             </div>
 
@@ -115,18 +115,18 @@
                 <div class="container nav_color sticky_nav">
                     <nav class="navbar navbar-expand-lg navbar-light">
                         <a class="navbar-brand" href="index.html">
-                            <img src="/assets/img/logo.png" height="90" width="90" alt="logo">
+                            <img src="assets/img/logo.png" height="90" width="90" alt="logo">
                         </a>
                         <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto">
                                 <li class="nav-item">
-                                    <a href="index.html" class="nav-link  active">Home</a>
+                                    <a href="index.html" class="nav-link">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="about.html" class="nav-link">About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="service.html" class="nav-link ">Services</a>
+                                    <a href="service.html" class="nav-link active">Services</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="blog.html" class="nav-link ">Blog</a>
@@ -280,8 +280,10 @@
         <div class="container">
             <div class="section-title text-center">
                 <h2>We are Top Rated Transport Logistic</h2>
-                <p>Found parents would couldn't said on. That, feedback there made he was may blind you simple, its yet
-                    a own blind you ago hand.</p>
+                <span>Why choose ABF Shipping?</span>
+                <p>There are many reasons to choose ABF Shipping for your delivery needs. They are fast and secure, and
+                    your product will be safe during the entire shipping process. With years of experience in the
+                    business, you can trust that your shipping requirements are in safe hands - ABF Shipping.</p>
             </div>
 
             <div class="row align-items-center">
@@ -312,7 +314,7 @@
 
                 <div class="col-lg-6">
                     <div class="why-choose-image">
-                        <img src="assets/img/why-choose/choose-img.png" alt="why Choose image">
+                        <img src="assets/img/newsletter-img.png" alt="why Choose image">
                     </div>
                 </div>
 
@@ -486,7 +488,8 @@
         </div>
 
         <div class="copyright-area">
-            <p>Copyright @ABF Shipping All Rights Reserved by <a href="#" target="_blank">Al Bahr Al Fakher Shipping</a>
+            <p>Copyright @ABAF Shipping All Rights Reserved by <a href="#" target="_blank">Al Bahr Al Fakher
+                    Shipping</a>
             </p>
         </div>
 
