--- a/terms.html
+++ b/terms.html
@@ -26,7 +26,7 @@
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="assets/css/responsive.css">
     <!-- Title CSS -->
-    <title>ABF Shipping</title>
+    <title>ABAF Shipping</title>
     <!-- Favicon Link -->
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
@@ -104,7 +104,7 @@
             <!-- For Mobile Device -->
             <div class="mobile-nav">
                 <a href="index.html" class="logo">
-                    <img src="/assets/img/logo.png" height="90" width="90" alt="logo">
+                    <img src="assets/img/logo.png" height="90" width="90" alt="logo">
                 </a>
             </div>
 
@@ -115,7 +115,7 @@
                 <div class="container nav_color sticky_nav">
                     <nav class="navbar navbar-expand-lg navbar-light">
                         <a class="navbar-brand" href="index.html">
-                            <img src="/assets/img/logo.png" height="90" width="90" alt="logo">
+                            <img src="assets/img/logo.png" height="90" width="90" alt="logo">
                         </a>
                         <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto">
@@ -213,7 +213,7 @@
     <div class="terms-section pt-100 pb-100">
         <div class="container">
             <div class="terms-text">
-                <h2>Fixa Terms of Service</h2>
+                <h2>ABAF Terms of Service</h2>
 
                 <h3>1. Terms</h3>
                 <p>By accessing the website you are agreeing to be bound by these terms of service, all applicable laws
@@ -222,26 +222,26 @@
                     The materials contained in this website are protected by applicable copyright and trademark law.</p>
 
                 <h3>2. Limitations</h3>
-                <p>In no event shall Fixa or its suppliers be liable for any damages (including, without limitation,
+                <p>In no event shall ABAF or its suppliers be liable for any damages (including, without limitation,
                     damages for loss of data or profit, or due to business interruption) arising out of the use or
-                    inability to use the materials on Fixa's website, even if Fixa or a Fixa authorized representative
+                    inability to use the materials on ABAF's website, even if ABAF or a ABAF authorized representative
                     has been notified orally or in writing of the possibility of such damage. Because some jurisdictions
                     do not allow limitations on implied warranties, or limitations of liability for consequential or
                     incidental damages, these limitations may not apply to you.</p>
 
                 <h3>3. Accuracy of materials</h3>
-                <p>The materials appearing on Fixa's website could include technical, typographical, or photographic
-                    errors. Fixa does not warrant that any of the materials on its website are accurate, complete or
-                    current. Fixa may make changes to the materials contained on its website at any time without notice.
-                    However Fixa does not make any commitment to update the materials.</p>
+                <p>The materials appearing on ABAF's website could include technical, typographical, or photographic
+                    errors. ABAF does not warrant that any of the materials on its website are accurate, complete or
+                    current. ABAF may make changes to the materials contained on its website at any time without notice.
+                    However ABAF does not make any commitment to update the materials.</p>
 
                 <h3>4. Links</h3>
-                <p>Fixa has not reviewed all of the sites linked to its website and is not responsible for the contents
-                    of any such linked site. The inclusion of any link does not imply endorsement by Fixa of the site.
+                <p>ABAF has not reviewed all of the sites linked to its website and is not responsible for the contents
+                    of any such linked site. The inclusion of any link does not imply endorsement by ABAF of the site.
                     Use of any such linked website is at the user's own risk.</p>
 
                 <h3>5. Modifications</h3>
-                <p>Fixa may revise these terms of service for its website at any time without notice. By using this
+                <p>ABAF may revise these terms of service for its website at any time without notice. By using this
                     website you are agreeing to be bound by the then current version of these terms of service.</p>
 
                 <h3>6. Governing Law</h3>
@@ -395,7 +395,8 @@
         </div>
 
         <div class="copyright-area">
-            <p>Copyright @ABF Shipping All Rights Reserved by <a href="#" target="_blank">Al Bahr Al Fakher Shipping</a>
+            <p>Copyright @ABAF Shipping All Rights Reserved by <a href="#" target="_blank">Al Bahr Al Fakher
+                    Shipping</a>
             </p>
         </div>
 
