--- a/blog-two.html
+++ b/blog-two.html
@@ -26,7 +26,7 @@
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="assets/css/responsive.css">
     <!-- Title CSS -->
-    <title>Fixa - Transport & Logistics HTML Template</title>
+    <title>ABAF Shipping</title>
     <!-- Favicon Link -->
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
@@ -525,7 +525,7 @@
             </div>
         </div>
         <div class="copyright-area">
-            <p>Copyright @Fixa. All Rights Reserved by <a href="https://hibootstrap.com" target="_blank">HiBootstrap</a>
+            <p>Copyright @ABAF. All Rights Reserved by <a href="https://hibootstrap.com" target="_blank">HiBootstrap</a>
             </p>
         </div>
 
