--- a/index-three.html
+++ b/index-three.html
@@ -25,7 +25,7 @@
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="assets/css/responsive.css">
     <!-- Title CSS -->
-    <title>Fixa - Transport & Logistics HTML Template</title>
+    <title>ABAF Shipping</title>
     <!-- Favicon Link -->
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
@@ -162,7 +162,7 @@
             <div class="d-table-cell">
                 <div class="container">
                     <div class="banner-text text-left">
-                        <h1>Fixa is the another name of transport & logistic Service</h1>
+                        <h1>ABAF is the another name of transport & logistic Service</h1>
 
                         <div class="theme-btn">
                             <a href="#" class="default-btn">Get a Free Call</a>
@@ -335,7 +335,7 @@
                 <div class="col-lg-6 p-0">
                     <div class="why-choose-text">
                         <div class="section-title">
-                            <h2>Why People Choose Fixa?</h2>
+                            <h2>Why People Choose ABAF?</h2>
                             <p>A cargo aircraft also known as freight aircraft, freighter, airlifter or cargo jet is a
                                 fixed-wing aircraft that is designed or converted for the carriage of cargo rather than
                                 passengers.</p>
@@ -910,7 +910,7 @@
             </div>
         </div>
         <div class="copyright-area">
-            <p>Copyright @Fixa. All Rights Reserved by <a href="https://hibootstrap.com" target="_blank">HiBootstrap</a>
+            <p>Copyright @ABAF. All Rights Reserved by <a href="https://hibootstrap.com" target="_blank">HiBootstrap</a>
             </p>
         </div>
 
