--- a/service-details.html
+++ b/service-details.html
@@ -26,7 +26,7 @@
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="assets/css/responsive.css">
     <!-- Title CSS -->
-    <title>Fixa - Transport & Logistics HTML Template</title>
+    <title>ABAF Shipping</title>
     <!-- Favicon Link -->
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
@@ -103,7 +103,7 @@
             <!-- For Mobile Device -->
             <div class="mobile-nav">
                 <a href="index.html" class="logo">
-                    <img src="/assets/img/logo.png" height="90" width="90" alt="logo">
+                    <img src="assets/img/logo.png" height="90" width="90" alt="logo">
                 </a>
             </div>
 
@@ -114,7 +114,7 @@
                 <div class="container nav_color sticky_nav">
                     <nav class="navbar navbar-expand-lg navbar-light">
                         <a class="navbar-brand" href="index.html">
-                            <img src="/assets/img/logo.png" height="90" width="90" alt="logo">
+                            <img src="assets/img/logo.png" height="90" width="90" alt="logo">
                         </a>
                         <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto">
