--- a/blog-details.html
+++ b/blog-details.html
@@ -160,7 +160,9 @@
                                                 <i class="icofont-phone"></i>
                                             </div>
                                             <div class="text">
-                                                <h3>00971 56 6495103</h3>
+                                                <h3> <a style="color: black;" href="tel:00971 56 6495103">
+                                                        00971 56 6495103
+                                                    </a></h3>
                                                 <p>Mon - Saturday: 9.00 to 18.00</p>
                                             </div>
                                         </div>
@@ -171,7 +173,10 @@
                                                 <i class="icofont-ui-message"></i>
                                             </div>
                                             <div class="text">
-                                                <h3>manager@albahralfakhershipping.com</h3>
+                                                <h3><a style="color: black;"
+                                                        href="mailto:manager@albahralfakhershipping.com">
+                                                        manager@albahralfakhershipping.com
+                                                    </a></h3>
                                                 <p>Get a Free Quote</p>
                                             </div>
                                         </div>
@@ -197,12 +202,12 @@
     <div class="page-title title-bg-5">
         <div class="container">
             <div class="title-text text-center">
-                <h2>Blog Details </h2>
+                <!-- <span>10 Amazing Benefits of Best Air Freight Services In Dubai </span> -->
                 <ul>
-                    <li>
+                    <!-- <li>
                         <a href="index.html">Home</a>
-                    </li>
-                    <li>Blog Details</li>
+                    </li> -->
+                    <li>10 Amazing Benefits of Best Air Freight Services In Dubai</li>
                 </ul>
             </div>
         </div>
@@ -216,20 +221,162 @@
                 <div class="col-lg-8">
                     <div class="blog-post-area">
                         <div class="blog-details-img">
-                            <img src="assets/img/blog/blog-details.jpg" alt="service details image">
+                            <img src="assets/img/blog-img/blog1.jpg" alt="service details image">
                         </div>
-                        <h2>Exporters Achieve Cost Savings Throughout sale</h2>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-                            galley of type and scrambled it to make a type specimen book. It has survived not only five
-                            centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
-                            passages.</p>
+                        <h2>10 Amazing Benefits of Best Air Freight Services In Dubai</h2>
+                        <p>Companies must increase their market share globally in order to increase profits in today's
+                            cutthroat business environment. Numerous businesses are operating internationally. To export
+                            and import goods and raw materials in Dubai, and ensure the growth and success of their
+                            businesses, they require the best air freight services in Dubai. The company will be able to
+                            ship items to and from Dubai and other parts of the UAE by selecting an air freight
+                            provider. Due to the benefits of using the top air freight services, which include some
+                            excellent aids and comforts, business owners are at peace.</p>
 
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                            suffered alteration in some form, by injected humour, or randomised words which don't look
-                            even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be
-                            sure there isn't anything embarrassing hidden in the middle of text.</p>
+                        <p>Air freight service companies make it simple and easy for you to ship goods by air. Employing
+                            the top air freight service providers in Dubai gives you some added benefits to completing
+                            your work. We will go over all the benefits of using the best air freight services for your
+                            company in this section.</p>
+
+                        <p>If you need to ship high-value, small-quantity items, air freight services in Dubai. It is a
+                            useful alternative for moving things of all sizes and forms. Because of its rapid pace, most
+                            business owners choose to use air freight services. One of the best things about air freight
+                            services in Dubai. The following are some benefits of using the top air freight services:
+                        </p>
+
+                        <h2>1.Fastest Shipping Service in Dubai</h2>
+                        <p>We benefit from using the best air freight services in Dubai to ship the items in the
+                            shortest amount of time. In comparison to sea and road freight services, air freight is
+                            undoubtedly faster, and it also has a reliable schedule for the shipment's departure and
+                            arrival. The cargo freight typically departs every other hour, so there is no difficulty
+                            even if a certain cargo jet has some problems. Advanced safety and security procedures are
+                            also used to ensure that the cargo is transported correctly. The best air freight services
+                            dramatically reduce the likelihood of cargo loss.</p>
+
+                        <p>The best options for shippers with time-sensitive cargo, such as perishables, may be an
+                            air-only or an ocean-to-air service. Because the perishable products need to be shipped as
+                            quickly as possible because of the nature of the products. So this is another reason that
+                            advocates going for air freight services in Dubai.</p>
+
+
+                        <h2>2.Cargo Delivery Throughout the World is Possible</h2>
+                        <p>Your products will be delivered anywhere in the world thanks to the top air freight services.
+                            Door-to-door air freight is the best option if your company needs to ship items over great
+                            distances. The leading air freight services have a wide range of locations and airports they
+                            may travel to. They work with airlines that provide these two benefits. </p>
+
+                        <p>You can ship to any secure location on earth by selecting the top air freight services.
+                            Therefore, whether it's in Dubai or in a different country, experienced air freight service
+                            providers in Dubai will handle it quickly and conveniently.</p>
+
+
+                        <h2>3. Timely Delivery of Goods</h2>
+                        <p>If a business is unable to handle and cater to the requirements and queries of the clients,
+                            it can simply lose those clients. Because in modern ways of doing business, on-time delivery
+                            of consignments is very crucial, more for the shipping company’s reputation than the
+                            clients. </p>
+
+                        <p>This is where some of the best air freight service companies come in handy. These companies
+                            ensure the on-time delivery of the cargo without damaging the goods. Another issue
+                            associated with shipping from Dubai to other countries is that quite often, shipping
+                            packages may get misplaced while getting to the destination for any reason. Best air freight
+                            service providers handle this issue effectively and make sure the cargo reaches its
+                            destination the way it was shipped. </p>
+                        <p>For timely and safe delivery, the best air freight companies in Dubai have a team of shipping
+                            professionals to handle this issue and make this whole process smooth. </p>
+
+                        <h2>4. Low Insurance Premium</h2>
+                        <p>The fact that they are less expensive than land and sea transportation is one of the notable
+                            benefits of using the best air freight services. Due to the shorter amount of time that
+                            products are in transit, business owners have to pay a lower insurance premium. It is quite
+                            simple; air freight is the fastest shipping method, due to which goods remain in transit for
+                            a shorter period of time, and hence the shipper pays less amount of premium. <br><br>
+                            The best air freight services will enable you to save more money in other areas, such as
+                            reduced insurance costs and premiums, even though the real cost of air freight may be more
+                            than sea and road freight. Businesses will be able to save money in packaging as well. You
+                            don't need to pack heavily because the best air freight services in Dubai are safer than sea
+                            freight and road freight. Because of this, air freight is chopped off due to the high
+                            expense of packaging.
+                        </p>
+
+                        <h2>5. Warehouse Is Not Needed in Air Freight</h2>
+                        <p>
+                            Utilizing the best air freight services allows business owners to avoid keeping stocks and
+                            reduces the need for local warehousing. Additionally, with the best air freight services,
+                            customs clearance, cargo handlers, and cargo inspection are highly effective. They are
+                            cleared in a matter of hours. <br> <br>
+                            There is less need for warehousing because air freight transports cargo quickly. Customs
+                            agents can inspect and authorize products for transit in a fraction of the time compared to
+                            some other delivery systems thanks to their efficient clearance procedures.
+
+                        </p>
+
+                        <h2>6. Economical Freight Solution</h2>
+                        <p>
+                            Your shipment's shipping cost increases with its size. However, even the largest loads may
+                            be transported affordably using the best air freight services in Dubai. They charge a fair
+                            price for the package, and on occasion, they even give consumers discounts. Companies that
+                            handle air freight have ways to move containers in large quantities and a competent crew to
+                            ensure hassle-free shipping and delivery. <br><br>
+                            Another reason for air freight service to be cost-effective is; as it is shipped in
+                            lightweight packaging, so we don’t need too much of packing materials for that. This
+                            ultimately reduces the cost of air freight services in Dubai.
+
+
+                        </p>
+
+                        <h2>7. Greater Security</h2>
+                        <p>
+                            High standards of security are also part of the top air freight services in Dubai. It
+                            lessens the chance of theft and damage while in transportation. The majority of airports and
+                            airlines have certain protocols in place to take good care of the shipments. In order to
+                            guarantee the secure transportation of cargo, airport officials strictly enforce these
+                            procedures. <br><br>
+                            High standards of security are also part of the top air freight services in Dubai. It
+                            lessens the chance of theft and damage while in transportation. The majority of airports and
+                            airlines have certain protocols in place to take good care of the shipments. In order to
+                            guarantee the secure transportation of cargo, airport officials strictly enforce these
+                            procedures.
+
+
+
+                        </p>
+
+                        <h2>8. Efficient Handling</h2>
+                        <p>Certain special items require special packaging. This issue will be resolved for you by the
+                            best air freight services in Dubai. They satisfy all of your shipment requirements using the
+                            safest and most dependable delivery path possible. However, accurate paperwork is also
+                            required in order to manage the delivery of any package effectively.</p>
+
+
+                        <h2>9. Accurate Documentation</h2>
+                        <p>Since every country has its own set of laws and regulations, legal documentation for
+                            transportation is the biggest nightmare for business owners shipping to other countries.
+                            Furthermore, faulty or insufficient documentation can cause delays. Fortunately, the top air
+                            freight services ensure in Dubai that you have precise documentation and that the legal
+                            processes are handled correctly.</p>
+
+                        <h2>10. Effective Inventory Control</h2>
+                        <p>The top air freight companies have an extensive global network. As a result, working with an
+                            air freight forwarding company might give you access to a staff that will manage your goods
+                            effectively. In fact, air freight businesses provide tools to help with effective inventory
+                            management.</p>
+
+                        <h2>Shipping Cargo is Trackable</h2>
+                        <p>
+                            The top air freight carriers also give customers the option to track their shipments using
+                            web tools. This enables business owners to keep an eye on the shipment from the moment of
+                            departure to the time of arrival. Thereby keeping them informed regarding their delivery.
+                            Providers of air freight services act on behalf of import and export companies to ensure
+                            effective, safe, and economical delivery of cargo. The following are only a few of the major
+                            advantages of using the best air freight services in Dubai: <br> <br>
+                            • Trust <br>
+                            • Easy customs clearance by documentation <br>
+                            • Standard at the Time as <br> <br>
+                            To cut down on travel time and expenses, it is logical to select the best air freight
+                            services in Dubai. You will be able to choose a course of action for your company that will
+                            be successful once you are aware of all the benefits of using the top air freight Services.
+
+                        </p>
 
                         <div class="row">
                             <div class="col-sm-6">
