--- a/blog-details.html
+++ b/blog-details.html
@@ -528,7 +528,7 @@
                     <div class="blog-card">
                         <div class="blog-img">
                             <a href="blog-details.html">
-                                <img src="assets/img/blog/1.png" alt="blog image">
+                                <img src="assets/img/home/banner1.jpg" alt="blog image">
                             </a>
                             <div class="blog-btn">
                                 <a href="#">
@@ -556,7 +556,7 @@
                     <div class="blog-card">
                         <div class="blog-img">
                             <a href="blog-details.html">
-                                <img src="assets/img/blog/2.png" alt="blog image">
+                                <img src="assets/img/home/banner1.jpg" alt="blog image">
                             </a>
                             <div class="blog-btn">
                                 <a href="#">
@@ -584,7 +584,7 @@
                     <div class="blog-card">
                         <div class="blog-img">
                             <a href="blog-details.html">
-                                <img src="assets/img/blog/5.png" alt="blog image">
+                                <img src="assets/img/home/banner1.jpg" alt="blog image">
                             </a>
                             <div class="blog-btn">
                                 <a href="#">
@@ -619,7 +619,7 @@
                 <div class="col-lg-3 col-sm-6">
                     <div class="footer-widget">
                         <a href="index.html">
-                            <img src="assets/img/logo-2.png" alt="logo">
+                            <img src="assets/img/home/banner1.jpg" alt="logo">
                         </a>
                         <ul>
                             <li>
