--- a/blog-details.html
+++ b/blog-details.html
@@ -29,6 +29,9 @@
     <title>ABAF Shipping</title>
     <!-- Favicon Link -->
     <link rel="icon" type="image/png" href="assets/img/logo.png">
+    <meta name="title" content="10 Amazing Benefits of Best Air Freight Services In Dubai">
+    <meta name="description"
+        content="Best air freight services | air freight services Dubai | Dubai air cargo services | air freight services | shipping services through air | best air freight services in Dubai | cheap air freight services in Dubai | Top air freight company in Dubai | air freight costs">
 </head>
 
 <body>
