--- a/ocean-freight.html
+++ b/ocean-freight.html
@@ -378,136 +378,15 @@
     <!-- Company Section End -->
 
     <!-- Footer Area Start -->
-    <footer class="footer-area">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-sm-6">
-                    <div class="footer-widget">
-                        <a href="index.html">
-                            <img src="assets/img/logo-2.png" alt="logo">
-                        </a>
-                        <ul>
-                            <li>
-                                <i class="icofont-phone"></i>
-                                <a href="tel:00971 56 6495103">
-                                    00971 56 6495103
-                                </a>
-                            </li>
-
-                            <li>
-                                <i class="icofont-ui-message"></i>
-                                <a href="mailto:hello@abfshipping.com">
-                                    hello@abfshipping.com
-                                </a>
-                            </li>
-
-                            <li class="footer_address">
-                                <i class="icofont-location-pin"></i>
-                                Deira, Duabi
-                                Office 425, Block B ,Business Village
-
-                            </li>
-                        </ul>
-
-                        <div class="footer-social">
-                            <a href="#" target="_blank">
-                                <i class="icofont-facebook"></i>
-                            </a>
-                            <a href="#" target="_blank">
-                                <i class="icofont-instagram"></i>
-                            </a>
-                            <a href="#" target="_blank">
-                                <i class="icofont-twitter"></i>
-                            </a>
-                            <a href="#" target="_blank">
-                                <i class="icofont-linkedin"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-sm-6">
-                    <div class="footer-widget">
-                        <h3>Our Services</h3>
-                        <ul>
-                            <li>
-                                <a href="service-details.html">Air Freight</a>
-                            </li>
-                            <li>
-                                <a href="service-details.html">Road Freight</a>
-                            </li>
-                            <li>
-                                <a href="ocean-freight.html">Ocean Freight</a>
-                            </li>
-                            <li>
-                                <a href="service-details.html">Warehousing</a>
-                            </li>
-                            <li>
-                                <a href="service-details.html">Storage</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-sm-6">
-                    <div class="footer-widget">
-                        <h3>Our Support</h3>
-                        <ul>
-                            <li>
-                                <a href="privacy.html">Privacy & Policy</a>
-                            </li>
-                            <li>
-                                <a href="faq.html">FAQS</a>
-                            </li>
-                            <li>
-                                <a href="terms.html">Terms & Conditions</a>
-                            </li>
-                            <li>
-                                <a href="contact.html">Contact Us</a>
-                            </li>
-                            <li>
-                                <a href="about.html">About Us</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-sm-6">
-                    <div class="footer-widget">
-                        <h3>Quick Links</h3>
-                        <ul>
-                            <li>
-                                <a href="index.html">Home</a>
-                            </li>
-                            <li>
-                                <a href="about.html">About Us</a>
-                            </li>
-                            <li>
-                                <a href="service.html">Our Services</a>
-                            <li>
-                                <a href="blog.html">Our Blog</a>
-                            </li>
-                            <li>
-                                <a href="contact.html">Eemrgency Support</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="copyright-area">
-            <p>Copyright @ABAF Shipping All Rights Reserved by <a href="#" target="_blank">Al Bahr Al Fakher
-                    Shipping</a>
-            </p>
-        </div>
-
-        <div class="lines">
-            <div class="line"></div>
-            <div class="line"></div>
-            <div class="line"></div>
-        </div>
-    </footer>
+    <div id="footer"></div>
+    <script src="https://code.jquery.com/jquery-3.3.1.js">
+    </script>
+    <script>
+        $(function () {
+            $("#header").load("header.html");
+            $("#footer").load("footer.html");
+        });
+    </script>
     <!-- Footer Area End -->
 
     <!-- Back top Button -->
